--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
             - v*
 
 env:
-    DOCKER_IMAGE=helldar/laravel-gitlab-ci
+    DOCKER_IMAGE: helldar/laravel-gitlab-ci
 
 jobs:
     build:
