--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
                     PREFIX="edge-"
                     SUFFIX="-alpine"
                     LATEST_TAG=edge
-                    LATEST_TAGS=$DOCKER_IMAGE:edge,$DOCKER_IMAGE:unstable
+                    LATEST_TAGS=${DOCKER_IMAGE}:edge,${DOCKER_IMAGE}:unstable
 
                     if [[ $VERSION == "latest" ]]; then
                         SUFFIX=""
@@ -48,7 +48,7 @@ jobs:
                     if [[ $GITHUB_REF == refs/tags/* ]]; then
                         PREFIX=""
                         LATEST_TAG=stable
-                        LATEST_TAGS=$DOCKER_IMAGE:latest,$DOCKER_IMAGE:stable
+                        LATEST_TAGS=${DOCKER_IMAGE}:latest,${DOCKER_IMAGE}:stable
                     fi
 
                     echo ::set-output name=prefix::${PREFIX}
@@ -93,8 +93,8 @@ jobs:
                     file: ./Dockerfile
                     push: true
                     tags: |
-                        $DOCKER_IMAGE:${{ steps.get_version.outputs.prefix }}${{ steps.prepare.outputs.minor_version }}
-                        $DOCKER_IMAGE:${{ steps.get_version.outputs.prefix }}${{ steps.prepare.outputs.patch_version }}
+                        ${DOCKER_IMAGE}:${{ steps.get_version.outputs.prefix }}${{ steps.prepare.outputs.minor_version }}
+                        ${DOCKER_IMAGE}:${{ steps.get_version.outputs.prefix }}${{ steps.prepare.outputs.patch_version }}
                     build-args: |
                         VERSION=${{ steps.get_version.outputs.prefix }}${{ steps.prepare.outputs.patch_version }}
                         MINOR_PHP_VERSION=${{ steps.prepare.outputs.minor_version }}
@@ -104,13 +104,13 @@ jobs:
 
             -   name: Inspect (latest)
                 if: success() && matrix.php_version == 'latest'
-                run: docker buildx imagetools inspect $DOCKER_IMAGE:${{ steps.get_version.outputs.latest_tag }}
+                run: docker buildx imagetools inspect ${DOCKER_IMAGE}:${{ steps.get_version.outputs.latest_tag }}
 
             -   name: Inspect (version)
                 if: success() && matrix.php_version != 'latest'
                 run: |
-                    docker buildx imagetools inspect $DOCKER_IMAGE:${{ steps.get_version.outputs.prefix }}${{ steps.prepare.outputs.minor_version }}
-                    docker buildx imagetools inspect $DOCKER_IMAGE:${{ steps.get_version.outputs.prefix }}${{ steps.prepare.outputs.patch_version }}
+                    docker buildx imagetools inspect ${DOCKER_IMAGE}:${{ steps.get_version.outputs.prefix }}${{ steps.prepare.outputs.minor_version }}
+                    docker buildx imagetools inspect ${DOCKER_IMAGE}:${{ steps.get_version.outputs.prefix }}${{ steps.prepare.outputs.patch_version }}
 
     description:
         runs-on: ubuntu-latest
