--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
                     PREFIX="edge-"
                     SUFFIX="-alpine"
                     LATEST_TAG=edge
-                    LATEST_TAGS=${DOCKER_IMAGE}:edge,${DOCKER_IMAGE}:unstable
+                    LATEST_TAGS="${DOCKER_IMAGE}:edge,${DOCKER_IMAGE}:unstable"
 
                     if [[ $VERSION == "latest" ]]; then
                         SUFFIX=""
@@ -48,7 +48,7 @@ jobs:
                     if [[ $GITHUB_REF == refs/tags/* ]]; then
                         PREFIX=""
                         LATEST_TAG=stable
-                        LATEST_TAGS=${DOCKER_IMAGE}:latest,${DOCKER_IMAGE}:stable
+                        LATEST_TAGS="${DOCKER_IMAGE}:latest,${DOCKER_IMAGE}:stable"
                     fi
 
                     echo ::set-output name=prefix::${PREFIX}
