--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
 
         strategy:
             matrix:
-                php_version: [ 7.2.34, 7.3.25, 7.4.13, 8.0.0, latest ]
+                php_version: [ 7.3.25, 7.4.13, 8.0.0, latest ]
 
         steps:
             -   name: Checkout
