Fixed find: missing argument to `-exec'

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,8 +25,8 @@ variables:
     chmod 644 ~/.ssh/known_hosts
 
 .change_file_permissions: &change_file_permissions |
-    find . -type f -not -path "./vendor/*" -exec chmod 664 {}
-    find . -type d -not -path "./vendor/*" -exec chmod 775 {}
+    find . -type f -not -path "./vendor/*" -exec chmod 664 {} \;
+    find . -type d -not -path "./vendor/*" -exec chmod 775 {} \;
 
 .php_version: &php_version |
     php -v
