--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,2 @@
-custom: ["https://paypal.me/helldar"]
+patreon: andrey_helldar
+custom: [ "https://paypal.me/helldar", "https://yoomoney.ru/to/410012608840929" ]
