--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,2 @@
-patreon: andrey_helldar
 open_collective: dragon-code
-custom: [ "https://paypal.me/helldar", "https://yoomoney.ru/to/410012608840929" ]
+custom: [ "https://yoomoney.ru/to/410012608840929" ]
