--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
 
         strategy:
             matrix:
-                php_version: [ 7.4.33, 8.0.26, 8.1.13, 8.2.0, latest ]
+                php_version: [ 8.0.26, 8.1.13, 8.2.0, latest ]
 
         steps:
             -   name: Checkout
