--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
 
         strategy:
             matrix:
-                php_version: [ 8.0.29, 8.1.20, 8.2.7, latest ]
+                php_version: [ 8.0.29, 8.1.20, 8.2.7, 8.3.0alpha1, latest ]
 
         steps:
             -   name: Checkout
