--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,8 @@ on:
     schedule:
         -   cron: 17 4 * * *
     push:
-        branches: main
+        branches:
+            - main
         tags:
             - v*
     workflow_dispatch:
